--- a/Lab3/Views/Home/Sing.cshtml
+++ b/Lab3/Views/Home/Sing.cshtml
@@ -6,20 +6,20 @@
     string num = Context.Session.GetString("num");
     int numInt = Int32.Parse(num);
     int output = numInt;
-    for (int i = 0; i <= output; i++)
+    for (int i = output; i >= 0; i--)
     {
-        if (output % 2 == 0)
+        if (i % 2 == 0)
         {
             if (i > 2) {
                 <p>
-                    @output little monkeys jumping on the bed,<br />
+                    @i little monkeys jumping on the bed,<br />
                     One fell off and bumped her head,<br />
                     Mama called the doctor and the doctor said,<br />
                     "No more monkeys jumping on the bed!"
                 </p>
-            } else if (i == 1) {
+            } else if (i == 2) {
                 <p>
-                    One little monkey jumping on the bed,<br />
+                    Two little monkey jumping on the bed,<br />
                     She fell off and bumped her head,<br />
                     Mama called the doctor and the doctor said,<br />
                     "Put those monkeys to bed!"
@@ -58,7 +58,6 @@
                 </p>
             }
         }
-        output -= 1;
     }
 
     @Html.ActionLink("Play Again!", "SongForm", "Home")
