Final Commit still needs News

--- a/Lab4/Views/Fans/Index.cshtml
+++ b/Lab4/Views/Fans/Index.cshtml
@@ -53,7 +53,7 @@
     <h3>Subscribed to Brokers:</h3>
     <table class="table">
         <tr>
-            @if (Model.SportClubs.Count() > 0)
+            @if (Model.SportClubs.Any())
             {
                 <th>Name</th>
             }
