--- a/Lab4/Views/Shared/_Layout.cshtml
+++ b/Lab4/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     @Html.ActionLink("SportClubs", "Index", "SportClubs")
 </header>
 <br/>
-    <div>
+    <div class="backgroundimage">
         @RenderBody()
     </div>
 <footer>
