--- a/Lab4/Views/SportClubs/Index.cshtml
+++ b/Lab4/Views/SportClubs/Index.cshtml
@@ -36,7 +36,7 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                <a asp-action="NewsIndex" asp-route-id="@item.Id">News</a>
+                <a asp-controller="News" asp-action="Index" asp-route-id="@item.Id">News</a>
             </td>
         </tr>
     }
